Fix indentation, capitalisation and path typos

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: ruby
     plan: free
     numInstances: 1
-    buildCommand: .bin/render-build.sh
-    startCommand: bundle exec Puma -C config/deploy/puma.rb
+    buildCommand: ./bin/render-build.sh
+    startCommand: bundle exec puma -C config/deploy/puma.rb
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -13,7 +13,8 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
-    databases:
-      - name: piazza-db
-        plan: free
-        postgresMajorVersion: 14
+
+databases:
+  - name: piazza-db
+    plan: free
+    postgresMajorVersion: 14
