--- a/test/fixtures/memberships.yml
+++ b/test/fixtures/memberships.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user: one
-  organisation: one
+# one:
+#   user: one
+#   organisation: one
 
-two:
-  user: two
-  organisation: two
+# two:
+#   user: two
+#   organisation: two
