--- a/test/fixtures/memberships.yml
+++ b/test/fixtures/memberships.yml
@@ -1,9 +1,17 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#   user: one
-#   organisation: one
+charlie: 
+  user: charlie
+  organisation: charlie
 
-# two:
-#   user: two
-#   organisation: two
+mac: 
+  user: mac
+  organisation: mac
+
+dennis: 
+  user: dennis
+  organisation: dennis
+
+dee: 
+  user: dee
+  organisation: dee
